# korali

./: .clang-format  .gitignore  .gitlab-ci.yml  .install.config.default  .readthedocs.yml  README.md  README.rst  build.sh  codecov.yml  install  meson.build  meson_options.txt  pyproject.toml  requirements.txt  todo.md
examples/bayesian.inference/reference/: .run_test.sh  .test-run-cmaes.py  .test-run-mcmc.py  .test-run-mtmcmc.py  .test-run-multinest.py  .test-run-nested.py  .test-run-tmcmc.py  README.rst  meson.build  run-cmaes.py  run-hmc-const.py  run-hmc-euclidean.py  run-hmc-riemannian.py  run-hmc.py  run-mcmc.py  run-mtmcmc.py  run-multinest.py  run-nested.py  run-tmcmc.py
examples/reinforcement.learning/cartpole/: .test-run.py  README.rst  meson.build  run-dvracer.py  run-vracer-multienv.py  run-vracer.py
examples/reinforcement.learning/mountaincart/: .test-run.py  README.rst  meson.build  plotStates.py  run-vracer.py
examples/supervised.learning/sineWave/: .test-run.py  README.rst  meson.build  plot-loss.py  run-ffn.py  run-rnn.py
poc/meson_code_gen/: .gitignore  build.sh  meson.build
poc/meson_code_gen/source/: meson.build
python/korali/: __init__.py  meson.build
python/korali/cxx/: .gitignore  __main__.py  cflags.py  createFlags.py  libs.py  meson.build
python/korali/plot/: AGENT.py  CMAES.py  DEA.py  HMC.py  MOCMAES.py  Nested.py  README.rst  TMCMC.py  __main__.py  meson.build
python/korali/plotter/: CMAES.py  DEA.py  LMCMAES.py  MCMC.py  MOCMAES.py  Nested.py  TMCMC.py  __main__.py  meson.build
python/korali/profiler/: __main__.py  meson.build
python/korali/rlview/: __main__.py  meson.build
source/: .gitignore  Makefile  __init__.py  build.py  engine.cpp  engine.hpp  getMPI4pyIncludes.py  korali.hpp  meson.build  pybinds.cpp  setup.py
source/auxiliar/: MPIUtils.cpp  MPIUtils.hpp  cbuffer.hpp  cudaUtils.hpp  dnnUtils.hpp  fs.hpp  json.hpp  jsonInterface.cpp  jsonInterface.hpp  kcache.hpp  koraliJson.hpp  kstring.cpp  kstring.hpp  logger.cpp  logger.hpp  math.cpp  math.hpp  meson.build  py2json.hpp  reactionParser.cpp  reactionParser.hpp
source/auxiliar/libco/: README.md  meson.build
source/auxiliar/libgp/: meson.build
source/auxiliar/optimizers/: fAdam.cpp  fAdam.hpp  fCMAES.cpp  fCMAES.hpp
source/auxiliar/rtnorm/: README  meson.build
source/modules/: README.rst  meson.build  module.cpp  module.hpp
source/modules/conduit/: README.rst  conduit._cpp  conduit._hpp  conduit.config  conduit.cpp  conduit.cpp.base  conduit.hpp  conduit.hpp.base  meson.build
source/modules/distribution/: README.rst  distribution._cpp  distribution._hpp  distribution.config  distribution.cpp  distribution.cpp.base  distribution.hpp  distribution.hpp.base  meson.build
source/modules/experiment/: README.rst  experiment._cpp  experiment._hpp  experiment.config  experiment.cpp  experiment.cpp.base  experiment.hpp  experiment.hpp.base  meson.build
source/modules/layer/: layer.config
source/modules/neuralNetwork/: README.rst  meson.build  neuralNetwork._cpp  neuralNetwork._hpp  neuralNetwork.config  neuralNetwork.cpp  neuralNetwork.cpp.base  neuralNetwork.hpp  neuralNetwork.hpp.base
source/modules/problem/: README.rst  meson.build  problem._cpp  problem.config  problem.cpp  problem.cpp.base  problem.hpp  problem.hpp.base
source/modules/solver/: README.rst  meson.build  solver._cpp  solver._hpp  solver.config  solver.cpp  solver.cpp.base  solver.hpp  solver.hpp.base
source/sample/: meson.build  sample.cpp  sample.hpp
source/variable/: .gitignore  meson.build  variable.hpp.base
subprojects/gsl/: ._fetch.sh  .gitignore  meson.build
subprojects/libco/: meson.build
subprojects/libgp/: meson.build
subprojects/libgp/include/: meson.build
subprojects/libgp/src/: cov_factory.cc  meson.build
subprojects/rtnorm/: README  meson.build
subprojects/rtnorm/new_implementation/: README
tests/: meson.build
tests/REG-000/: meson.build  run_test.sh
tests/REG-001/: meson.build  run_test.sh
tests/REG-002/: run_test.sh
tests/REG-003/: meson.build  run_test.sh
tests/REG-004/: meson.build  run_test.sh  tmcmc_specifics.py
tests/REG-005/: README.rst  meson.build  run_test.sh
tests/STAT-001/: .test-run.py  meson.build  run-hmc-nuts.py  run-hmc.py  run-tmcmc.py  run_test.sh
tests/STAT-001/model/: model.py
tests/STAT-002/: meson.build  run-hmc-nuts.py  run-hmc.py  run_test.sh
tests/STAT-002/model/: model.py
tests/STAT-003/: meson.build  run_test.sh
tests/STAT-004/: .test-run-mcmc.py  .test-run-rchmc.py  .test-run.py  meson.build  run-hmc-exponential.py  run-hmc-gaussian.py  run-hmc-gaussian5d.py  run-hmc-laplace.py  run-hmc-nuts-exponential.py  run-hmc-nuts-gaussian.py  run-hmc-nuts-gaussian5d.py  run-hmc-nuts-laplace.py  run-hmc-riemannian-gaussian5d.py  run-hmc-riemannian-laplace.py  run-mcmc-gaussian.py  run-mcmc-laplace.py  run-multinest-gaussian5d.py  run-rchmc-exponential.py  run-rchmc-gaussian.py  run-rchmc-gaussian5d.py  run-rchmc-laplace.py  run-tmcmc-exponential.py  run-tmcmc-gaussian5d.py  run-tmcmc-laplace.py  run_test.sh
tests/STAT-004/model/: model.py
tests/STAT-005/: Makefile  meson.build  run-mincmaes1.cpp  run-mincmaes1.py  run_test.sh
tests/STAT-006/: meson.build  run_test.sh
tests/STAT-007/: meson.build  run_test.sh
tests/STAT-008/: meson.build  run_test.sh
tests/docs/: meson.build
tests/python/: meson.build
tests/python/PYTHON-000/: meson.build
tests/python/PYTHON-001/: meson.build  test-run.py
tests/python/cxx/: README.rst  meson.build  test-run.py
tests/python/plot/: meson.build  test-run.py
tests/python/plotter/: meson.build
tests/python/rlview/: README.rst  meson.build  test-run.py
tests/regression/: meson.build
tests/regression/REG-000/: meson.build  tmcmc-specifics.py
tests/statistical/: meson.build
tests/statistical/STAT-001/: meson.build
tests/statistical/STAT-002/: meson.build
tests/statistical/STAT-003/: meson.build  run-dea.py
tests/statistical/STAT-004/: .test-run-hmc.py  (+6 more)
tests/unit/: auxiliar.cpp  conduits.cpp  distributions.cpp  engine.cpp  meson.build  sample.cpp
(+2614 files in other folders)
