[build-system]
requires = ["wheel>0.33,<=0.34.1", "mesonpep517", "ninja", "meson", "toml", "setuptools"]
build-backend = "mesonpep517.buildapi"

[tool.mesonpep517.metadata]
author = "Korali devs TODO"
author-email = "dummy@ethz.ch"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
description-file = "README.rst"
home-page = "https://www.cse-lab.ethz.ch/korali/"
meson-python-option-name = "python3"
meson-options = [
    "--buildtype=release",
    "--default-library=static",
    "--force-fallback-for=gsl",
    "--strip",
    "-Dtest=false",
]
platforms = "py3"
project-urls = [
    "Source, https://github.com/cselab/korali",
    "Documentation, https://www.cse-lab.ethz.ch/korali/docs",
]
requires-python = "py3"
summary = "High-performance framework for uncertainty quantification, optimization and reinforcement learning"
