auxiliar_source = files([
  'cbuffer.hpp',
  'cudaUtils.hpp',
  'dnnUtils.hpp',
  'fs.cpp',
  'fs.hpp',
  'json.hpp',
  'jsonInterface.cpp',
  'jsonInterface.hpp',
  'kcache.hpp',
  'koraliJson.cpp',
  'koraliJson.hpp',
  'kstring.cpp',
  'kstring.hpp',
  'logger.cpp',
  'logger.hpp',
  'math.cpp',
  'math.hpp',
  'py2json.hpp',
])

korali_source += auxiliar_source
