modules_header = files([
  'module.hpp',
])
install_headers(modules_header,
  install_dir: run_command(header_path, [korali_install_headers, meson.current_source_dir()]).stdout().strip()
)

modules_source = files([
  'module.cpp',
])
korali_include += include_directories('.')
korali_source += modules_header
korali_source += modules_source

subdir('conduit')
subdir('conduit/concurrent')
subdir('conduit/distributed')
subdir('conduit/sequential')

subdir('distribution')
subdir('distribution/multivariate')
subdir('distribution/multivariate/normal')
subdir('distribution/specific')
subdir('distribution/specific/multinomial')
subdir('distribution/univariate')
subdir('distribution/univariate/beta')
subdir('distribution/univariate/cauchy')
subdir('distribution/univariate/exponential')
subdir('distribution/univariate/gamma')
subdir('distribution/univariate/geometric')
subdir('distribution/univariate/igamma')
subdir('distribution/univariate/laplace')
subdir('distribution/univariate/logNormal')
subdir('distribution/univariate/normal')
subdir('distribution/univariate/truncatedNormal')
subdir('distribution/univariate/uniform')
subdir('distribution/univariate/weibull')

subdir('experiment')

subdir('neuralNetwork')
subdir('neuralNetwork/layer')
subdir('neuralNetwork/layer/activation')
subdir('neuralNetwork/layer/input')
subdir('neuralNetwork/layer/linear')
subdir('neuralNetwork/layer/output')
subdir('neuralNetwork/layer/recurrent')
subdir('neuralNetwork/layer/recurrent/gru')
subdir('neuralNetwork/layer/recurrent/lstm')

subdir('problem')
subdir('problem/bayesian')
subdir('problem/bayesian/custom')
subdir('problem/bayesian/reference')
subdir('problem/hierarchical')
subdir('problem/hierarchical/psi')
subdir('problem/hierarchical/theta')
subdir('problem/hierarchical/thetaNew')
subdir('problem/integration')
subdir('problem/optimization')
subdir('problem/propagation')
subdir('problem/reinforcementLearning')
subdir('problem/reinforcementLearning/continuous')
subdir('problem/reinforcementLearning/discrete')
subdir('problem/sampling')
subdir('problem/supervisedLearning')

subdir('solver')
subdir('solver/agent')
subdir('solver/agent/continuous')
subdir('solver/agent/continuous/GFPT')
subdir('solver/agent/continuous/NAF')
subdir('solver/agent/continuous/VRACER')
subdir('solver/agent/discrete')
subdir('solver/agent/discrete/dVRACER')
subdir('solver/executor')
subdir('solver/integrator')
subdir('solver/learner')
subdir('solver/learner/deepSupervisor')
subdir('solver/learner/deepSupervisor/optimizers')
subdir('solver/learner/gaussianProcess')
subdir('solver/optimizer')
subdir('solver/optimizer/AdaBelief')
subdir('solver/optimizer/Adam')
subdir('solver/optimizer/CMAES')
subdir('solver/optimizer/DEA')
subdir('solver/optimizer/LMCMAES')
subdir('solver/optimizer/MOCMAES')
subdir('solver/optimizer/Rprop')
subdir('solver/optimizer/gridSearch')
subdir('solver/sampler')
subdir('solver/sampler/MCMC')
subdir('solver/sampler/Nested')
subdir('solver/sampler/TMCMC')
